{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 852,
  "lineage": "5f07ec52-ff4d-4fbb-f839-6e696ce228cb",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/frontendIPConfigurations/app_lb_frontend",
                "name": "app_lb_frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/publicIPAddresses/lb-public-ip"
              }
            ],
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer",
            "location": "canadaeast",
            "name": "EnterpriseAppLoadBalancer",
            "resource_group_name": "CGI-Enterprise",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.lb_ip",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "app_lb_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/backendAddressPools/AppLBBackendPool",
            "loadbalancer_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer",
            "name": "AppLBBackendPool"
          },
          "dependencies": [
            "azurerm_lb.app_lb",
            "azurerm_public_ip.lb_ip",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "app_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.app_lb",
            "azurerm_public_ip.lb_ip",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/backendAddressPools/AppLBBackendPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/frontendIPConfigurations/app_lb_frontend",
            "frontend_ip_configuration_name": "app_lb_frontend",
            "frontend_port": 80,
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/loadBalancingRules/HttpRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer",
            "name": "HttpRule",
            "probe_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.app_lb",
            "azurerm_lb_backend_address_pool.app_lb_pool",
            "azurerm_lb_probe.app_probe",
            "azurerm_public_ip.lb_ip",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/backendAddressPools/AppLBBackendPool"
            ],
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/frontendIPConfigurations/app_lb_frontend",
            "frontend_ip_configuration_name": "app_lb_frontend",
            "frontend_port": 443,
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/loadBalancingRules/HttpsRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer",
            "name": "HttpsRule",
            "probe_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.app_lb",
            "azurerm_lb_backend_address_pool.app_lb_pool",
            "azurerm_lb_probe.app_probe",
            "azurerm_public_ip.lb_ip",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkInterfaces/app-nic-1",
            "internal_domain_name_suffix": "p2nh40ur03kejhm2z2nlgx2vwb.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/publicIPAddresses/app-vm-public-ip-1",
                "subnet_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet/subnets/AppSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadaeast",
            "name": "app-nic-1",
            "private_ip_address": "10.1.1.5",
            "private_ip_addresses": [
              "10.1.1.5"
            ],
            "resource_group_name": "CGI-Enterprise"
          },
          "dependencies": [
            "azurerm_public_ip.app_vm_public_ip",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkInterfaces/app-nic-2",
            "internal_domain_name_suffix": "p2nh40ur03kejhm2z2nlgx2vwb.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/publicIPAddresses/app-vm-public-ip-2",
                "subnet_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet/subnets/AppSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadaeast",
            "name": "app-nic-2",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "CGI-Enterprise"
          },
          "dependencies": [
            "azurerm_public_ip.app_vm_public_ip",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkInterfaces/db-nic",
            "internal_domain_name_suffix": "p2nh40ur03kejhm2z2nlgx2vwb.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet/subnets/DataSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadaeast",
            "name": "db-nic",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "CGI-Enterprise"
          },
          "dependencies": [
            "azurerm_resource_group.enterprise_rg",
            "azurerm_subnet.data_subnet",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "app_nic_lb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/backendAddressPools/AppLBBackendPool",
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkInterfaces/app-nic-1/ipConfigurations/internal|/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/backendAddressPools/AppLBBackendPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkInterfaces/app-nic-1"
          },
          "dependencies": [
            "azurerm_lb.app_lb",
            "azurerm_lb_backend_address_pool.app_lb_pool",
            "azurerm_network_interface.app_nic",
            "azurerm_public_ip.app_vm_public_ip",
            "azurerm_public_ip.lb_ip",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/backendAddressPools/AppLBBackendPool",
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkInterfaces/app-nic-2/ipConfigurations/internal|/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/loadBalancers/EnterpriseAppLoadBalancer/backendAddressPools/AppLBBackendPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkInterfaces/app-nic-2"
          },
          "dependencies": [
            "azurerm_lb.app_lb",
            "azurerm_lb_backend_address_pool.app_lb_pool",
            "azurerm_network_interface.app_nic",
            "azurerm_public_ip.app_vm_public_ip",
            "azurerm_public_ip.lb_ip",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "canadaeast",
            "name": "app-nsg",
            "resource_group_name": "CGI-Enterprise",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-rdp",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "165.225.212.248"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.enterprise_rg",
            "azurerm_subnet.app_subnet",
            "azurerm_subnet.data_subnet",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "data_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkSecurityGroups/data-nsg",
            "location": "canadaeast",
            "name": "data-nsg",
            "resource_group_name": "CGI-Enterprise",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-sql",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.1.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.enterprise_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app_vm_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/publicIPAddresses/app-vm-public-ip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.239.110.199",
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "app-vm-public-ip-1",
            "resource_group_name": "CGI-Enterprise",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.enterprise_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/publicIPAddresses/app-vm-public-ip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.248.63.253",
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "app-vm-public-ip-2",
            "resource_group_name": "CGI-Enterprise",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.enterprise_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/publicIPAddresses/bastion-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.239.104.176",
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "bastion-ip",
            "resource_group_name": "CGI-Enterprise",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.enterprise_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/publicIPAddresses/lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.239.106.23",
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "lb-public-ip",
            "resource_group_name": "CGI-Enterprise",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.enterprise_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet/subnets/AppSubnet",
            "name": "AppSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "CGI-Enterprise",
            "virtual_network_name": "CGIEnterpriseVNet"
          },
          "dependencies": [
            "azurerm_resource_group.enterprise_rg",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "CGI-Enterprise",
            "virtual_network_name": "CGIEnterpriseVNet"
          },
          "dependencies": [
            "azurerm_resource_group.enterprise_rg",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "data_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet/subnets/DataSubnet",
            "name": "DataSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "CGI-Enterprise",
            "virtual_network_name": "CGIEnterpriseVNet"
          },
          "dependencies": [
            "azurerm_resource_group.enterprise_rg",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet/subnets/AppSubnet",
            "network_security_group_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet/subnets/AppSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_subnet.app_subnet",
            "azurerm_subnet.data_subnet",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "data_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet/subnets/DataSubnet",
            "network_security_group_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/networkSecurityGroups/data-nsg",
            "subnet_id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet/subnets/DataSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.data_nsg",
            "azurerm_resource_group.enterprise_rg",
            "azurerm_subnet.data_subnet",
            "azurerm_virtual_network.enterprise_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "enterprise_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6a7f1a7f-d791-4454-9d9c-cf1ab35f95b1",
            "id": "/subscriptions/6965eb53-1efc-427c-90a5-b7f30f902d11/resourceGroups/CGI-Enterprise/providers/Microsoft.Network/virtualNetworks/CGIEnterpriseVNet",
            "location": "canadaeast",
            "name": "CGIEnterpriseVNet",
            "resource_group_name": "CGI-Enterprise"
          },
          "dependencies": [
            "azurerm_resource_group.enterprise_rg"
          ]
        }
      ]
    }
  ]
}